--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
-    "prettier": "^2.8.3"
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "morgan": "^1.10.0",
     "node-sass": "^8.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3"
   }
 }
